--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "pelican-plugins/ipynb"]
-	path = pelican-plugins/ipynb
-	url = git://github.com/danielfrg/pelican-ipynb.git
 [submodule "pelican-themes/Flex_blue"]
 	path = pelican-themes/Flex_blue
 	url = https://github.com/yx0906/Flex.git
+[submodule "pelican-plugins"]
+	path = pelican-plugins
+	url = https://github.com/getpelican/pelican-plugins.git
